tdf#118498 Correct CustomShape 3D Visualization

Change-Id: Ic312190616044f37fd92464ad605c6e0cdd5cc4d
Reviewed-on: https://gerrit.libreoffice.org/57547
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>
(cherry picked from commit ee71c3def71508d1fc3e110659c7ed7aa0ba2238)